--- a/untitled/pubspec.yaml
+++ b/untitled/pubspec.yaml
@@ -1,4 +1,4 @@
-name: image_carousel
+name: untitled
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -56,9 +57,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   assets:
-    - assets/image/
+    - asset/img/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
